@@ -1,5 +1,16 @@
 2006-01-08  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
+	* lib/rel.cpp :
+	* lib/rel.h :
+	* lib/rlist.cpp :
+	* lib/rlist.h :
+
+	  - Fixed is_ground() function to return VLAD_OK instead of a
+	    boolean value.
+
+	  - Removed m_ground from rlist as these is no reliable way to
+	    keep track of the rels.
+
 	* lib/tnet.cpp :
 
 	  - add_constraint() now checks whether the given rlist is ground
